--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+    <h1></h1>
+    <nav></nav>
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
+    </header>
+    <aside>
+<h2></h2>
+<p></p>
+   </aside>
+   <section>
+<p></p>
+<img src="" alt="">
+<p></p>
+<p></p>
+    </section>
+    <Footer>
+<button></button>
+<button></button>
+<button></button>
+    </Footer>
 </body>
 </html>
