Criar placeholders de texto e imagem
Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -9,26 +9,31 @@
 </head>
 <body>
     <header>
-    <h1></h1>
-    <nav></nav>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
+        <h1>Título da página</h1>
+        <nav>
+        <a href="http://mastertech.tech">Mastertech</a>
+        <a href="http://fb.com">Facebook</a>
+        <a href="http://pudim.com.br">Pudim</a>
+        </nav>
     </header>
     <aside>
-<h2></h2>
-<p></p>
+        <h2>Título da barra lateral</h2>
+        <p>Proudly present butt to human get suspicious of own shadow then go
+        play with toilette paper meeeeouw try to jump onto window and fall while
+        scratching at wall spread kitty litter all over house favor packaging over toy.
+        Proudly present butt to human all of a sudden cat goes crazy, </p>
    </aside>
    <section>
-<p></p>
-<img src="" alt="">
-<p></p>
-<p></p>
+        <p>but grab pompom in mouth and put in water dish stinky cat. </p>
+        <img src="http://placekitten.com/250/250" alt="placekitten">
+        <p>Scream for no reason at 4 am plan steps for world domination so immediately regret
+        falling into bathtub. </p>
+        <p>Twitch tail in permanent irritation purr while eating, yet meeeeouw so cough hairball on conveniently placed pants. </p>
     </section>
     <Footer>
-<button></button>
-<button></button>
-<button></button>
+        <button>Clique aqui</button>
+        <button>Não clique aqui</button>
+        <button>Clique aqui mas talvez não</button>
     </Footer>
 </body>
 </html>
